# Senti

./: .gitignore  senti  vm.sh
senti-api/: add.cpp  add.h  go.mod  main.go
senti-api/notebooks/: model.ipynb
senti-api/scripts/: convert.py  train.py
senti-api/src/: senti.cpp
senti-cli/src/user/: models.go
senti-core/: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
senti-core/data/: vocab.json
senti-core/notebooks/: model.ipynb
senti-core/senti/: train.py
senti-core/src/sentc/: senti.cpp
senti-ui/: package-lock.json
senti-ui/.storybook/: main.js
senti-ui/src/: App.js
senti-ui/src/components/header/: header.css
senti-ui/src/components/input/: ChatInput.stories.js
senti-ui/src/components/logo/: Logo.jsx  Logo.stories.js  logo.css
sentiment-api/: .gitignore  CMakeLists.txt  Dockerfile  Pipfile  core.sh
sentiment-api/notebooks/: model.ipynb
sentiment-api/scripts/: serve.py  train.py
sentiment-api/src/sentc/: preprocessing.cpp  preprocessing.hpp  senti.cpp
sentiment-api/src/sentpy/: model.py  preprocessing.py
ui/: package-lock.json  package.json
ui/src/: index.js
ui/src/components/chat/: ChatWindow.jsx  chatwindow.css
ui/src/components/header/: Header.js  Header.stories.js  header.css
ui/src/components/input/: ChatInput.jsx  chatInput.css
ui/src/components/logo/: Logo.jsx  Logo.stories.js
ui/src/pages/: ChatPage.jsx
user-api/src/: main.go
